--- a/ASPNETSimple.WEB/Views/Shared/_Layout.cshtml
+++ b/ASPNETSimple.WEB/Views/Shared/_Layout.cshtml
@@ -11,6 +11,10 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
+            @if (!string.IsNullOrEmpty(TempData["Notification"] as string))
+            {
+                @Html.Partial("Notification")
+            }
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
@@ -20,8 +24,7 @@
                 @Html.ActionLink("Application name", "Home", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+                <ul class="nav navbar-nav"></ul>
             </div>
         </div>
     </div>
