--- a/ASPNETSimple.WEB/Views/Account/Login.cshtml
+++ b/ASPNETSimple.WEB/Views/Account/Login.cshtml
@@ -8,10 +8,19 @@
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "" })
-    <div class="">@Html.TextBoxFor(m => m.Email, new { @class = "", tabindex = "1", autofocus = "true", id = "email-input" })</div>
+
+    <div class="">
+        <label>@Html.LabelFor(m => m.Email): </label>
+        @Html.TextBoxFor(m => m.Email, new { @class = "", tabindex = "1", autofocus = "true", id = "email-input" })
+    </div>
     <div>@Html.ValidationMessageFor(m => m.Email, "", new { @class = "" })</div>
-    <div class="">@Html.PasswordFor(m => m.Password, new { @class = "", tabindex = "2", id = "password-input" })</div>
+
+    <div class="">
+        <label>@Html.LabelFor(m => m.Password): </label>
+        @Html.PasswordFor(m => m.Password, new { @class = "", tabindex = "2", id = "password-input" })
+    </div>
     <div>@Html.ValidationMessageFor(m => m.Password, "", new { @class = "" })</div>
+
     <input type="submit" value="Log in" class="" tabindex="3" />
 }
 <label>First time here? @Html.ActionLink("Join now", "Register", "Account")</label>
