--- a/ASPNETSimple.WEB/Views/Account/Register.cshtml
+++ b/ASPNETSimple.WEB/Views/Account/Register.cshtml
@@ -4,18 +4,70 @@
     ViewBag.Title = "Register";
 }
 
-@using (Html.BeginForm("Register", "Account", null, FormMethod.Post, new { @class = "", role = "form" }))
-{
-    @Html.ValidationSummary(true, "", new { @class = "" })
-    <div class="">@Html.TextBoxFor(m => m.Email, new { @class = "", tabindex = "1", autofocus = "true", id = "email-input" })</div>
-    <div>@Html.ValidationMessageFor(m => m.Email, "", new { @class = "" })</div>
-    <div class="">@Html.PasswordFor(m => m.Password, new { @class = "", tabindex = "2", id = "password-input" })</div>
-    <div>@Html.ValidationMessageFor(m => m.Password, "", new { @class = "" })</div>
-    <div class="">@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "", tabindex = "3", id = "confirm-password-input" })</div>
-    <div>@Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "" })</div>
-    <div class="">@Html.TextBoxFor(m => m.FirstName, new { @class = "", tabindex = "4", id = "first-name-input" })</div>
-    <div>@Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "" })</div>
-    <div class="">@Html.TextBoxFor(m => m.LastName, new { @class = "", tabindex = "5", id = "last-name-input" })</div>
-    <div>@Html.ValidationMessageFor(m => m.LastName, "", new { @class = "" })</div>
-    <input type="submit" value="Log in" class="" tabindex="6" />
-}
+<div class="row">
+    <div class="col-md-4 col-md-offset-4">
+
+        @using (Html.BeginForm("Register", "Account", null, FormMethod.Post, new { @class = "", role = "form" }))
+        {
+            @Html.ValidationSummary(true, "", new { @class = "" })
+
+            <div class="col-md-12">
+                <div class="row">
+                    <label>@Html.LabelFor(m => m.Email): </label>
+                </div>
+                <div class="row">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", tabindex = "1", autofocus = "true", id = "email-input" })
+                </div>
+                <div class="row">@Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })</div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="row">
+                    <label>@Html.LabelFor(m => m.Password): </label>
+                </div>
+                <div class="row">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", tabindex = "2", id = "password-input" })
+                </div>
+                <div class="row">@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })</div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="row">
+                    <label>@Html.LabelFor(m => m.ConfirmPassword): </label>
+                </div>
+                <div class="row">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", tabindex = "3", id = "confirm-password-input" })
+                </div>
+                <div class="row">@Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })</div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="row">
+                    <label>@Html.LabelFor(m => m.FirstName): </label>
+                </div>
+                <div class="row">
+                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", tabindex = "4", id = "first-name-input" })
+                </div>
+                <div class="row">@Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })</div>
+            </div>
+
+
+            <div class="col-md-12">
+                <div class="row">
+                    <label>@Html.LabelFor(m => m.LastName): </label>
+                </div>
+                <div class="row">
+                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", tabindex = "5", id = "last-name-input" })
+                </div>
+                <div class="row">@Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })</div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="row">
+                    <button type="submit" class="btn btn-primary btn-block" tabindex="6">Register</button>
+                </div>
+            </div>
+        }
+
+    </div>
+</div>
