--- a/ASPNETSimple.WEB/Views/Home/Home.cshtml
+++ b/ASPNETSimple.WEB/Views/Home/Home.cshtml
@@ -9,17 +9,20 @@
         font-weight: normal;
         margin: 0;
         margin-right: 50px;
+        min-width: 230px;
     }
 </style>
 
 <h2>Home</h2>
 @foreach (ASPNETSimple.BLL.Models.UserModel user in Model)
 {
-    <div>
-        <label><strong>ID:</strong> @user.Id</label>
-        <label><strong>Email:</strong> @user.Email</label>
-        <label><strong>FirstName:</strong> @user.FirstName</label>
-        <label><strong>Password:</strong> @user.Password</label>
+    <div class="col-md-12">
+        <div class="row row-margin">
+            <label><strong>ID:</strong> @user.Id</label>
+            <label><strong>Email:</strong> @user.Email</label>
+            <label><strong>FirstName:</strong> @user.FirstName</label>
+            <label><strong>Password:</strong> @user.Password</label>
+        </div>
     </div>
 }
 
