--- a/ASPNETSimple.WEB/Content/css/site_structure.css
+++ b/ASPNETSimple.WEB/Content/css/site_structure.css
@@ -10,10 +10,15 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,
 select,
 textarea {
     max-width: 280px;
+}*/
+
+.row-margin {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .row-width-standard {
