--- a/ASPNETSimple.WEB/Views/Account/Register.cshtml
+++ b/ASPNETSimple.WEB/Views/Account/Register.cshtml
@@ -12,40 +12,40 @@
             @Html.ValidationSummary(true, "", new { @class = "" })
 
             <div class="col-md-12">
-                <div class="row">
+                <div class="row row-margin">
                     <label>@Html.LabelFor(m => m.Email): </label>
                 </div>
-                <div class="row">
+                <div class="row row-margin">
                     @Html.TextBoxFor(m => m.Email, new { @class = "form-control", tabindex = "1", autofocus = "true", id = "email-input" })
                 </div>
                 <div class="row">@Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })</div>
             </div>
 
             <div class="col-md-12">
-                <div class="row">
+                <div class="row row-margin">
                     <label>@Html.LabelFor(m => m.Password): </label>
                 </div>
-                <div class="row">
+                <div class="row row-margin">
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control", tabindex = "2", id = "password-input" })
                 </div>
                 <div class="row">@Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })</div>
             </div>
 
             <div class="col-md-12">
-                <div class="row">
+                <div class="row row-margin">
                     <label>@Html.LabelFor(m => m.ConfirmPassword): </label>
                 </div>
-                <div class="row">
+                <div class="row row-margin">
                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", tabindex = "3", id = "confirm-password-input" })
                 </div>
                 <div class="row">@Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })</div>
             </div>
 
             <div class="col-md-12">
-                <div class="row">
+                <div class="row row-margin">
                     <label>@Html.LabelFor(m => m.FirstName): </label>
                 </div>
-                <div class="row">
+                <div class="row row-margin">
                     @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", tabindex = "4", id = "first-name-input" })
                 </div>
                 <div class="row">@Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })</div>
@@ -53,10 +53,10 @@
 
 
             <div class="col-md-12">
-                <div class="row">
+                <div class="row row-margin">
                     <label>@Html.LabelFor(m => m.LastName): </label>
                 </div>
-                <div class="row">
+                <div class="row row-margin">
                     @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", tabindex = "5", id = "last-name-input" })
                 </div>
                 <div class="row">@Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })</div>
